fixes after review
Signed-off-by: strailov <Stanislav.Trailov@bosch.io>